--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,7 +1,7 @@
 <!-- Footer -->
 
   <div id="footer">
-    Built with Vim and testing 3SB -  
+    Built with Vim and 3SB -  
     <a href="https://www.nerdbude.com/impressum.html">./impressum </a>
     <a target="_blank" href="https://www.nerdbude.com/datenschutz.html">./datenschutz </a>
   </div>
