--- a/templates/header.html
+++ b/templates/header.html
@@ -20,9 +20,9 @@
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@PH_0x17">
 
-    <meta property="og:url" content="https://www.nerdbude.com/hiy_i.html">
-    <meta property="og:title" content="Host it yourself (2)">
-    <meta property="og:description" content="Die Spezifikationen. Welche Software und welche Hardware wird benutzt.">
+    <meta property="og:url" content="https://www.nerdbude.com/3sb.html">
+    <meta property="og:title" content="3SB - simple static site builder">
+    <meta property="og:description" content="A small CMS like tool to organize the NERDBUDE">
 
     <meta property="og:image" content="https://www.nerdbude.com/images/fav.png">
     <link rel="icon" type="image/png" href="https://www.nerdbude.com/images/fav.png">
